--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           "https://script.google.com/macros/s/AKfycbyhMWDe3D2EUKH0B08lGB0cTqqpKL1PZA8LDfiPKGWKDOXUQrfV7z4nnvk2SbDCOhs/exec",
           {
             method: "POST",
+            mode: 'no-cors', // Add this line
             headers: {
               "Content-Type": "application/json",
             },
