--- a/index.html
+++ b/index.html
@@ -1,70 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #f0f0f0;
-      }
-      .container {
-        text-align: center;
-        background: white;
-        padding: 30px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-      }
-      input[type="email"] {
-        padding: 10px;
-        margin: 10px 0;
-        width: 80%;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-      button {
-        padding: 10px 20px;
-        border: none;
-        background-color: #28a745;
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Signup Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <div class="container">
-        <h1>Subscribe to our Newsletter</h1>
-        <form id="emailForm">
-            <input type="email" id="email" placeholder="Enter your email" required />
+        <h1>Subscribe to Our Newsletter</h1>
+        <form id="email-form" target="_blank" action="YOUR_GOOGLE_FORM_URL" method="POST">
+            <input type="email" id="email" name="entry.XXXXXXXXX" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
-        <p id="responseMessage"></p>
+        <p id="message"></p>
     </div>
-    <script>
-        const form = document.getElementById("emailForm");
-        form.addEventListener("submit", function (e) {
-            e.preventDefault();
-            const email = document.getElementById("email").value;
-            const script = document.createElement('script');
-            script.src = `https://script.google.com/macros/s/AKfycbyuZMxWVWA5gH_nYmYDY6Kt_eWbBankUnLdgxkHJSp-uIZ9CqgYvvtHYbBmaNkIGgQ3/exec?callback=handleResponse&email=${encodeURIComponent(email)}`;
-            document.body.appendChild(script);
-        });
-
-        function handleResponse(data) {
-            if (data.success) {
-                document.getElementById("responseMessage").textContent = "Thank you for subscribing!";
-                form.reset();
-            } else {
-                document.getElementById("responseMessage").textContent = "An error occurred: " + data.message;
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
