--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>Subscribe to Our Newsletter</h1>
-        <form id="email-form" target="_blank" action="YOUR_GOOGLE_FORM_URL" method="POST">
-            <input type="email" id="email" name="entry.XXXXXXXXX" placeholder="Enter your email" required>
+        <form id="email-form" target="_blank" action="https://docs.google.com/forms/d/e/1FAIpQLScpCDUORs_STZfIjZaPtcEtfTtm9nEEUgnU770Y6NcfXZxRrQ/viewform?usp=sf_link" method="POST">
+            <input type="email" id="email" name="entry.940834938" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
         <p id="message"></p>
